...
            Text(
                text = stringResource(R.string.calc_sdk_find_perfect_fit),
                fontWeight = FontWeight.Bold,
            )
            Spacer(modifier = Modifier.height(16.dp))
            NumberInput(
                modifier = Modifier.testTag("heightInput"),
                value = heightCm,
                label = stringResource(id = R.string.calc_sdk_height_cm),
                imeAction = ImeAction.Next,
                onValueChange = { heightCm = it },
            )
            Spacer(modifier = Modifier.height(8.dp))
            NumberInput(
                modifier = Modifier.testTag("weightInput"),
                value = weightKg,
                label = stringResource(id = R.string.calc_sdk_weight_kg),
                imeAction = ImeAction.Done,
                keyboardActions = KeyboardActions(
                    onDone = {
                        if (isValidInput) {
...
